[tool.poetry]
name = "rabbit-py"
version = "0.1.0"
description = ""
authors = ["Ian Handley <ihandley@nuskin.com>"]
readme = "README.md"
packages = [{include = "rabbit_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
